Issue #3108875 by sasanikolic: Convert overflowing paragraph summary gradient to ellipsis

--- a/css/_summary.scss
+++ b/css/_summary.scss
@@ -38,17 +38,7 @@
       overflow: hidden;
       word-break: break-all;
       line-height: 1.538em;
-
-      // Fade out text element.
-      &::after {
-        display: block;
-        position: absolute;
-        top: 0;
-        right: 0;
-        width: 3em;
-        background: linear-gradient(to right, rgba(255, 255, 255, 0) 0%, #fff 100%);
-        content: "\00a0";
-      }
+      text-overflow: ellipsis;
     }
 
     .summary-plugin-label::after {
@@ -60,6 +50,7 @@
     }
 
     .summary-plugin {
+      display: inline-block;
       padding-right: 5px;
       font-size: 0.7rem;
       color: $behavior-summary-color;
@@ -67,6 +58,7 @@
       &:not(:last-child) {
         border-right: 2px solid $light-grey;
       }
+
       &:not(:first-child) {
         padding: 0 5px;
       }
