--- a/css/paragraphs.widget.scss
+++ b/css/paragraphs.widget.scss
@@ -176,6 +176,8 @@
       -ms-grid-column: 1;
       -ms-grid-column-span: 5;
       grid-row: 2 / span 1;
+      overflow: hidden;
+      white-space: nowrap;
 
       @media (min-width: map-get($grid-breakpoints, 'sm')) {
         grid-column: 3 / 4;
